<resources>
    <string name="app_name">Мой Дом</string>
    <string name="news_feed">Новости</string>
    <string name="chat">Чат</string>
    <string name="user_profile">Мой профиль</string>
    <string name="splash_icon_content_description">Splash Icon</string>
    <string name="sign_in">Авторизация</string>
    <string name="email">Электронная почта</string>
    <string name="contract_number">Номер договора</string>
    <string name="sign_in_btn">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="name">Имя</string>
    <string name="sign_up_btn">Зарегистрироваться</string>
    <string name="title">Заголовок</string>
    <string name="news_image_content_description">Изображение, прикреплённое к новости</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="enter_title">Введите заголовок:</string>
    <string name="news_text_hint">О чём вы хотите рассказать?</string>
    <string name="title_text_hint">Заголовок</string>
    <string name="publish">Опубликовать</string>
    <string name="image_added">Фото прикреплено.</string>
    <string name="phone_icon_content_description">Номер телефона</string>
    <string name="phone_example">+7 (900) 111 0500</string>
    <string name="contact_example">455 022 123</string>
    <string name="edit">Редактировать</string>
    <string name="change_profile_pic"><u>Изменить</u></string>
    <string name="enable_notifications">Получать уведомления</string>
    <string name="save">Сохранить</string>
    <string name="message_text">Текст сообщения</string>
    <string name="time_example">12:45</string>
    <string name="enter_message">Напишите сообщение…</string>
    <string name="get_access">Получить доступ</string>
    <string name="add_news_fab_content_desc">Добавить новость</string>
    <string name="email_example">test@gmail.com</string>
    <string name="letter_example">А</string>
    <string name="password">Пароль</string>
    <string name="sign_up_error">При регистрации возникла неизвестная ошибка. Пожалуйста, попробуйте снова.</string>
    <string name="sign_up_success">Регистрация прошла успешно.</string>
    <string name="contract_not_exist">Договор с указанным номером не был найден. Пожалуйста, проверьте введённые данные и попробуйте снова.</string>
    <string name="unknown_error">Произошла неизвестная ошибка.</string>
    <string name="image_upload_error">Произошла ошибка при загрузке изображения. Попробуйте выбрать изображение меньшего размера.</string>
    <string name="changes_saved">Изменения были успешно сохранены.</string>
    <string name="edit_icon_content_description">Редактирование новости</string>
    <string name="confirm_delete">Удалить новость</string>
    <string name="delete_question">Вы действительно хотите удалить выбранную новость?</string>
    <string name="cancel">Отмена</string>
    <string name="accept">Да</string>
    <string name="image_changed">Изображение было изменено.</string>
    <string name="message_image_content_description">Изображение, прикреплённое к сообщению</string>
    <string name="action_ok">Ок</string>
    <string name="enter_name">"Введите имя"</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_contract">Введите номер договора о собственности. Это необходимо для того, чтобы обезопасить сообщество от мошенников и спамеров.</string>
    <string name="enter_password">Введите пароль</string>
    <string name="email_invalid">Email введён некорректно. Пожалуйста, попробуйте снова.</string>
    <string name="password_invalid">Пароль должен состоять минимум из 6 символов и содержать только латинские символы и цифры.</string>
    <string name="contract_number_invalid">Номер договора должен состоять из 7 цифр без пробелов и дефисов.</string>
    <string name="sign_in_failed">Неверно введён логин или пароль.</string>
    <string name="enter_text">Введите текст новости</string>
    <string name="title_empty">Введите заголовок</string>
    <string name="exit">Выйти</string>
    <string name="exit_icon_content_description">Выйти из аккаунта</string>
    <string name="message_empty">Введите сообщение</string>
    <string name="option">Вариант ответа</string>
    <string name="vote">Проголосовать</string>
    <string name="multiple_choice">Выбор нескольких вариантов</string>
    <string name="polls">Голосования</string>
    <string name="enter_options">Необходимо задать минимум два варианта для выбора.</string>
    <string name="poll_results">Результаты опроса</string>
    <string name="delete_news_content_description">Удаление новости</string>
    <string name="poll_closed">Опрос закрыт.</string>
    <string name="confirm_close">Закрыть опрос</string>
    <string name="close_question">Вы действительно хотите закрыть опрос?</string>
    <string name="set_moderator_rights">Назначить модератором</string>
    <string name="remove_moderator_rights">Убрать права модератора</string>
    <string name="role_changed">Роль пользователя была успешно сохранена.</string>
</resources>