<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/small_margin"
    android:layout_marginTop="@dimen/small_margin"
    android:background="@drawable/item_background"
    android:elevation="@dimen/list_item_elevation">

    <TextView
        android:id="@+id/title_text"
        style="@style/header_h3_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_news"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:maxLines="2"
        app:layout_constraintEnd_toStartOf="@id/edit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <ImageView
        android:id="@+id/edit_btn"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/tiny_margin"
        android:contentDescription="@string/edit_icon_content_description"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/delete_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:backgroundTint="@color/pink_500"
        android:contentDescription="@string/delete_news_content_description"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/news_text"
        style="@style/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_news"
        android:layout_marginTop="@dimen/small_margin"
        android:justificationMode="inter_word"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        tools:text="@string/example_text" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/news_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin_news"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/news_image_content_description"
        android:maxHeight="@dimen/image_max_height"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_text"
        app:shapeAppearanceOverlay="@style/rounded_corners_img_view"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/date_text"
        style="@style/text_chat_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin"
        android:text="@string/time_example"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_image" />

</androidx.constraintlayout.widget.ConstraintLayout>