<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.UserProfileFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_profile_pic"
        android:layout_width="@dimen/user_pic_size"
        android:layout_height="@dimen/user_pic_size"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_text"
        style="@style/header_h3_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/user_profile_pic" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:contentDescription="@string/phone_icon_content_description"
        android:src="@drawable/ic_phone"
        app:layout_constraintEnd_toStartOf="@id/phone_text"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/name_text" />

    <TextView
        android:id="@+id/phone_text"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/phone_example"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/phone_icon"
        app:layout_constraintTop_toTopOf="@id/phone_icon" />

    <ImageView
        android:id="@+id/contract_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:contentDescription="@string/phone_icon_content_description"
        android:src="@drawable/ic_contract"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/phone_icon"
        app:layout_constraintTop_toBottomOf="@id/phone_text" />

    <TextView
        android:id="@+id/contract_text"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_example"
        app:layout_constraintStart_toStartOf="@id/phone_text"
        app:layout_constraintTop_toTopOf="@id/contract_icon" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/contract_text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/current_user_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="phone_icon, phone_text, contract_icon, contract_text, edit_btn"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/large_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/large_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/big_margin" />


</androidx.constraintlayout.widget.ConstraintLayout>