<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.news.AddEditNewsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:hint="@string/title_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/news_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:hint="@string/news_text_hint"
        app:layout_constraintBottom_toTopOf="@id/publish_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/news_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_image_btn"
        style="@style/Widget.App.Button.IconOnly"
        android:layout_width="@dimen/btn_size"
        android:layout_height="@dimen/btn_size"
        app:icon="@drawable/ic_add_image"
        app:layout_constraintBottom_toTopOf="@id/publish_btn"
        app:layout_constraintEnd_toEndOf="@id/news_text_field"
        app:layout_constraintTop_toTopOf="@id/news_text_field"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/image_info_text"
        style="@style/label_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/image_added"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/add_image_btn"
        app:layout_constraintStart_toStartOf="@id/news_text_field"
        app:layout_constraintTop_toBottomOf="@id/news_text_field"
        tools:visibility="visible" />

    <Button
        android:id="@+id/publish_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/publish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_image_btn" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:backgroundTint="@color/green_200"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publish_btn"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>